--- a/page6.html
+++ b/page6.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.me/r">free bootstrap templates</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2i" data-rv-view="100" style="background-color: rgb(228, 170, 97); padding-top: 120px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.me/a">Mobirise alternative</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2i" data-rv-view="100" style="background-color: rgb(228, 170, 97); padding-top: 120px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -70,7 +70,7 @@
     </div>
 </section>
 
-<section class="mbr-cards mbr-section mbr-section-nopadding" id="features7-2j" data-rv-view="102" style="background-color: rgb(255, 255, 255);">
+<section class="mbr-cards mbr-section mbr-section-nopadding mbr-parallax-background" id="features7-2j" data-rv-view="102" style="background-image: url(assets/images/basket-797x369.png);">
 
     
 
