create github pages

--- a/page7.html
+++ b/page7.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.me/i">web creation software</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-27" data-rv-view="51" style="background-color: rgb(228, 170, 97); padding-top: 120px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.me/z">best free html templates</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-27" data-rv-view="51" style="background-color: rgb(228, 170, 97); padding-top: 120px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
