--- a/page3.html
+++ b/page3.html
@@ -46,7 +46,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="page1.html" aria-expanded="true" data-toggle="dropdown-submenu">ABOUT US</a><div class="dropdown-menu"><a class="dropdown-item" href="page1.html" aria-expanded="false">Vision &amp; Mission Statement</a><a class="dropdown-item" href="page8.html" aria-expanded="false">Founder's Message</a><a class="dropdown-item" href="page1.html" aria-expanded="false">Principal's Message/Lagos</a><a class="dropdown-item" href="page1.html" aria-expanded="false">Principal's Message/Ogun</a><a class="dropdown-item" href="page1.html" aria-expanded="false">School Song</a><a class="dropdown-item" href="page1.html" aria-expanded="false">Governance (Quality Assurance)</a><a class="dropdown-item" href="page1.html" aria-expanded="false">Staff (Team)</a></div></li><li class="nav-item"><a class="nav-link link" href="page2.html">NEWS</a></li><li class="nav-item"><a class="nav-link link" href="page7.html">SCHOOLS</a></li><li class="nav-item"><a class="nav-link link" href="page3.html">ADMISSIONS</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="page4.html" data-toggle="dropdown-submenu" aria-expanded="false">ALUMNI/LOGiN</a><div class="dropdown-menu"><a class="dropdown-item" href="page4.html">Parent Login</a><a class="dropdown-item" href="page4.html">Student Login</a><a class="dropdown-item" href="page4.html">Schoolsoft</a></div></li><li class="nav-item"><a class="nav-link link" href="page6.html">STUDENT &amp; ACADEMIC</a></li><li class="nav-item"><a class="nav-link link" href="page2.html"></a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="page1.html" aria-expanded="false" data-toggle="dropdown-submenu">ABOUT US</a><div class="dropdown-menu"><a class="dropdown-item" href="page1.html" aria-expanded="false">Vision &amp; Mission Statement</a><a class="dropdown-item" href="page8.html" aria-expanded="false">Founder's Message</a><a class="dropdown-item" href="page1.html" aria-expanded="false">Principal's Message/Lagos</a><a class="dropdown-item" href="page1.html" aria-expanded="false">Principal's Message/Ogun</a><a class="dropdown-item" href="page1.html" aria-expanded="false">School Song</a><a class="dropdown-item" href="page1.html" aria-expanded="false">Governance (Quality Assurance)</a><a class="dropdown-item" href="page1.html" aria-expanded="false">Staff (Team)</a></div></li><li class="nav-item"><a class="nav-link link" href="page2.html">NEWS</a></li><li class="nav-item"><a class="nav-link link" href="page7.html">SCHOOLS</a></li><li class="nav-item"><a class="nav-link link" href="page3.html">ADMISSIONS</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="page4.html" data-toggle="dropdown-submenu" aria-expanded="true">ALUMNI/LOGiN</a><div class="dropdown-menu"><a class="dropdown-item" href="page4.html">Parent Login</a><a class="dropdown-item" href="page4.html">Student Login</a><a class="dropdown-item" href="page4.html">Schoolsoft</a></div></li><li class="nav-item"><a class="nav-link link" href="page6.html">STUDENT &amp; ACADEMIC</a></li><li class="nav-item"><a class="nav-link link" href="page2.html"></a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.me/y">html site templates</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1z" data-rv-view="54" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobirise.me">Mobirise</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1z" data-rv-view="54" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 40px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -173,7 +173,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="4A9GooEdzLKa6qbaT7/F8maE2AJa5p/FS0Ksd9ThzhcpEBvWEMJq+J7tKA3yWZ4aoaW0eo9SJ+Pe7boz2egf7G4VVTz1RVSCr7sz1dCnyP9wXqYof5n2mHc+M9O/WDYW" data-form-email="true">
+                        <input type="hidden" value="Nbzw9BpCibXBF2V73cTesjg5BaCQOfD0zkPLAMOo51aHEdwqK9G9QTDAgygYvVqlWH+Oky4Z+xDCd+jZL1eDBLo72JMEP9mf4ucbfiHYqsTLc13Fo+RDeGQILzRdxPCB" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
