create github pages

--- a/page1.html
+++ b/page1.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.me/a">Mobirise alternative</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1o" data-rv-view="17" style="background-color: rgb(228, 170, 97); padding-top: 120px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.me/l">free site templates</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1o" data-rv-view="17" style="background-color: rgb(228, 170, 97); padding-top: 120px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -108,7 +108,7 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-xs-center">
                 <h3 class="mbr-section-title display-2">JEXTOBAN SECONDARY SCHOOL</h3>
-                <div class="lead"><p>...a value driven secondary school</p></div>
+                <div class="lead"><p>.<em>..a value driven secondary school</em></p></div>
                 
             </div>
         </div>
