--- a/page3.html
+++ b/page3.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.me">Mobirise</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1z" data-rv-view="54" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobirise.me/e">make a site</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1z" data-rv-view="54" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 40px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -140,7 +140,7 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-xs-center">
                 <h3 class="mbr-section-title display-2">JEXTOBAN SECONDARY SCHOOL</h3>
-                <div class="lead"><p>...a value driven secondary school</p></div>
+                <div class="lead"><p><em>...a value driven secondary school</em></p></div>
                 
             </div>
         </div>
@@ -173,7 +173,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="Nbzw9BpCibXBF2V73cTesjg5BaCQOfD0zkPLAMOo51aHEdwqK9G9QTDAgygYvVqlWH+Oky4Z+xDCd+jZL1eDBLo72JMEP9mf4ucbfiHYqsTLc13Fo+RDeGQILzRdxPCB" data-form-email="true">
+                        <input type="hidden" value="Kaqnpn7PFocED8UkjRvo/sUnaaiCHnBFSSndICVo7XT452fuDh6VeolN9UKp59UPkc7Sv1kVuq/EFzUkuNLrhtylqOsqFkvlyfcTXif8ocO8FBFNK1jBxVoDp69w/gvE" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
