--- a/page4.html
+++ b/page4.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.me/y">html site templates</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-23" data-rv-view="77" style="background-color: rgb(228, 170, 97); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobirise.me/o">free one page site templates</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-23" data-rv-view="77" style="background-color: rgb(228, 170, 97); padding-top: 120px; padding-bottom: 40px;">
 
     
     <div class="container">
@@ -100,7 +100,7 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-xs-center">
                 <h3 class="mbr-section-title display-2">JEXTOBAN SECONDARY SCHOOL</h3>
-                <div class="lead"><p>...a value driven secondaty school</p></div>
+                <div class="lead"><p>..<em>.a value driven secondary school</em></p></div>
                 
             </div>
         </div>
